--- a/src/python/tox.ini
+++ b/src/python/tox.ini
@@ -2,7 +2,7 @@
 envlist = py27
 
 [testenv]
-deps= -rrequirements.txt
-commands=py.test --verbose test_ontologyutils.py
+deps=-r{toxinidir}/requirements.txt
+commands=py.test --verbose ontologyutils/tests_ontologyutils.py
 setenv =
     LC_ALL=C
