--- a/resources/ontology_config.ini
+++ b/resources/ontology_config.ini
@@ -6,11 +6,11 @@
 #eco=https://storage.cloud.google.com/ot-1702-input/eco.owl
 hpo=http://purl.obolibrary.org/obo/hp.owl
 mp=http://www.informatics.jax.org/downloads/reports/mp.owl
-efo=https://github.com/EBISPOT/efo/raw/master/efo.owl
+efo=https://github.com/EBISPOT/efo/raw/master/efo_inferred.owl
 so=https://github.com/The-Sequence-Ontology/SO-Ontologies/blob/master/releases/so-xp.owl/so-xp.owl?raw=true
 eco=https://raw.githubusercontent.com/evidenceontology/evidenceontology/master/eco.owl
 uberon=http://purl.obolibrary.org/obo/uberon.owl
 uberon_extended_version=http://purl.obolibrary.org/obo/uberon/ext.owl
 
 [pickle]
-cache_dir=/tmp/cttv_cache
+cache_dir=/tmp
