consolidate tests, add coverage

--- a/tox.ini
+++ b/tox.ini
@@ -3,6 +3,6 @@ envlist = py27,py36
 
 [testenv]
 deps=-r{toxinidir}/requirements.txt
-commands=py.test --verbose ontologyutils/tests_ontologyutils.py
+commands=python -m pytest --cov=ontologyutils
 setenv =
     LC_ALL=C
