pin transitive pytest version

--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -1,10 +1,9 @@
 #make sure this matches setup.py extras_require
 
+#transitive pin on pytest to avoid 4.1.0 which is broken
+pytest>=4.0.0,<4.1.0
 pytest-cov
 pylint
-
-#https://github.com/pytest-dev/pytest/issues/3753#issuecomment-411121588
-pluggy>=0.7
 tox
 
 codecov
