--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ python:
 sudo: required
 install:
   - pip install -e .[dev]
+  - pipdeptree
 script: 
   - pytest --cov=opentargets_ontologyutils --cov-report term tests/ --fulltrace
 deploy:
